--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <input type="number" id="number" name="number" min="0" step="0.01" placeholder="" required>
             </div>
             
-            <button type="submit" class="submit-btn">Calculate</button>
+            <button type="submit" class="submit-btn">Lấy code</button>
         </form>
         
         <div class="result-section">
